--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   kali:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.kali
       args:
         - CLOUD_USER_PASSWORD=${CLOUD_USER_PASSWORD}
     container_name: kali-desktop
