--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-
-
 services:
   kali:
     build:
@@ -40,15 +38,14 @@ services:
     restart: unless-stopped
 
   fedora:
-    build:
-      context: .
-      dockerfile: Dockerfile.fedora
-    container_name: fedora-desktop
+    image: kasmweb/fedora-40-desktop:1.16.0
     ports:
-      - "3393:3389"
-    volumes:
-      - fedora-data:/home/cloud_user
-    restart: unless-stopped
+      - "6901:6901"
+    environment:
+      - VNC_PW=Batman298
+    shm_size: 512m
+    stdin_open: true
+    tty: true
 
   debian:
     build:
